# video-analytic-bot_test-task

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 04280c7c3b0b_update_dates.py  fd7df72e834c_init.py
src/: db.py  exceptions.py  logging.py  middleware.py  prompts.py  settings.py
src/bot/: routes.py
src/handlers/: errors.py  user.py
src/middlewares/: llm_middleware.py
src/models/: __init__.py  video.py  video_snapshot.py
src/parser/: parse.py  parser.py  schemas.py
src/services/: db_service.py  llm_service.py
