[project]
name = "video-analytic-bot-test-task"
version = "0.1.0"
description = "Test task for RLT (https://docs.google.com/document/d/1XQSuK7jC5k_hrJ3KhkjWsD7BwzUvuP_HwKsbZuhAE8c/edit?tab=t.0)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.24.0",
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "openai>=2.17.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
]
